Build, lint, security and standards: fix frontend TS/ESLint; externalize JWT; add CODE_STANDARDS.md
- Frontend: fix TypeScript and ESLint (Layout useQuery types, KnowledgeBasePage, hooks order, setState-in-effect, only-export-components)
- Backend: JWT secret from APP_JWT_SECRET env; prod profile requires it
- .env.example: document APP_JWT_SECRET, CORS, Oracle, VITE_API_BASE_URL
- PasswordHashGenerator: document as seed-only utility; no plain password in output
- docs/CODE_STANDARDS.md: no Cursor/Claude refs; security and deployment checklist

Co-authored-by: Cursor <cursoragent@cursor.com>